Finished Step 3 - Super Basic Ugly Way

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>INDEX</title>
   <link rel="stylesheet" href="index.css">
-  <script src="index.js"></script> 
+   
 </head>
 <body>
-  
+  <h1>THE TITLE OF YOUR WEBPAGE</h1>
+  <div id="container">
+
+  </div>
+  <script src="index.js"></script>
 </body>
 </html>
