--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
    
 </head>
 <body>
-  <h1>THE TITLE OF YOUR WEBPAGE</h1>
-  <div id="container">
+  <div class="bigContainer">
+    <div class="sidebar-Container">
 
-  </div>
+    </div>
+    <div>
+      <div class="nav-Container">
+        <h1>THE TITLE OF YOUR WEBPAGE</h1>
+      </div>
+      <div id="container">    
+            
+      </div>
+    </div>    
+  </div> 
   <script src="index.js"></script>
 </body>
 </html>
