--- a/index.html
+++ b/index.html
@@ -10,6 +10,43 @@
 <body>
   <div class="bigContainer">
     <div class="sidebar-Container">
+      <div class="main">
+        <section>
+          <h2>Let´s create a Book</h2>      
+          <form action="" method="post">                
+            <div class="flex-container">
+              <p>
+                <label for="title">
+                  <span>Book Title: </span>
+                  <strong><span aria-label="required">*</span></strong>
+                </label>
+                <input type="text" id="title" name="book_title" required />
+              </p>
+              <p>
+                <label for="author">
+                  <span>Book Author:</span>
+                  <strong><span aria-label="required">*</span></strong>
+                </label>
+                <input type="text" id="author" name="book_author" required>
+              </p>
+              <p>
+                <label for="pages">
+                  <span>Book Pages:</span>
+                  <strong><span aria-label="required">*</span></strong>
+                </label>
+                <input type="number" id="pages" name="book_pages" required>
+              </p>
+              <p>
+                <label for="read">
+                  <span>Have you read it:</span>
+                  <strong><span aria-label="required">*</span></strong>
+                </label>
+                <input type="checkbox" id="read" name="haveYouReadIt" required>
+              </p>              
+            </div>                                                                
+            <button type="submit">Create Book</button>
+        </section>
+      </div>
 
     </div>
     <div>
