--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="main">
         <section>
           <h2>Let´s create a Book</h2>      
-          <form action="" method="post">                
+          <form action="javascript:createBookFromForm()" id="form">                
             <div class="flex-container">
               <p>
                 <label for="title">
@@ -37,11 +37,8 @@
                 <input type="number" id="pages" name="book_pages" required>
               </p>
               <p>
-                <label for="read">
-                  <span>Have you read it:</span>
-                  <strong><span aria-label="required">*</span></strong>
-                </label>
-                <input type="checkbox" id="read" name="haveYouReadIt" required>
+                <label for="is-Read">Yes:</label><input type="radio" value="read" name="isRead" id="is-Read">
+                <label for="not-Read">No:</label><input type="radio" value="not read yet" name="isRead" id="not-Read">
               </p>              
             </div>                                                                
             <button type="submit">Create Book</button>
